@@ -3,6 +3,8 @@
 - Improved readability in memory views
 - Fixed memory edition in GUI
 - Fixed CPSR/SPSR being usable as common registers
+- Fixed broken shift argument (with register)
+- Fixed broken shift highlighting/autocompletion
 
 
 0.2.1 -> 0.2.2
